--- a/chat-web/index.html
+++ b/chat-web/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Chat-gpt</title>
+    <link rel="icon" href="/favicon-32x32.png" type="image/x-icon" />
   </head>
   <body>
     <div id="root"></div>
