优化问答样式

--- a/chat-web/index.html
+++ b/chat-web/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Chat-gpt</title>
   <link rel="icon" href="/favicon-32x32.png" type="image/x-icon" />
-  <link href="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/github-markdown-css/5.1.0/github-markdown-dark.min.css"
+  <link href="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/github-markdown-css/5.1.0/github-markdown.css"
     type="text/css" rel="stylesheet" />
 </head>
 
