--- a/chat-web/index.html
+++ b/chat-web/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>小金--AI</title>
+  <title>小金-AI</title>
   <link rel="icon" href="/favicon-32x32.png" type="image/x-icon" />
   <link href="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/github-markdown-css/5.1.0/github-markdown.css"
     type="text/css" rel="stylesheet" />
